sg.tf
resource "aws_security_group" "lb" {
  name        = "gitea-lb-sg"
  description = "Allow HTTP access to the ALB"
  vpc_id      = module.vpc-gitea.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "db" {
  name        = "gitea-db-sg"
  description = "Allow Postgres access from ECS tasks"
  vpc_id      = module.vpc-gitea.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    security_groups = [aws_security_group.gitea.id]  # ECS tasks
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "gitea" {
  name        = "gitea-app-sg"
  description = "Allow app access from ALB"
  vpc_id      = module.vpc-gitea.vpc_id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.lb.id] # ALB → ECS
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
